fix: resolve release blockers and harden homepage hero